# video-to-canvas-skill

./: .env.example  .gitignore  README.md  SKILL.md
commands/: video-to-canvas.md
config/: default-config.json
references/: json-canvas-spec.md  v2-architecture.md
scripts/: add_video_timestamps.py  differential_captioner.py  fusion_detector.py  local_detector.py  prompt_builder.py  prompt_builder_v2.py  pyproject.toml  queue_processor.py  srt_generator.py  styles.py  transcriber.py  transcript_to_srt.py  translate_srt.py  video_to_md.py
